                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-03-2006 fixed: volumebar and seekbar would speed a short while after changing songs
 - 21-03-2006 fixed: trainers for games on dvd.
 - 20-03-2006 added: RemapGlyph() routine to remap common missing characters in XPR fonts (only handles quotes and double quotes at this stage).
 - 20-03-2006 fixed: [ 1453490 ] zoom in causes skip in slideshow
 - 20-03-2006 fixed: Password entry would prompt twice for the password.  Now only does so on XBMC passwords (lockcodes etc.)
 - 19-03-2006 fixed: list all volumes in multi volume rar sets (enables e.g. rarred dvd folders).
 - 19-03-2006 changed: Moved a few things logged at LOGERROR to LOGDEBUG
 - 19-03-2006 fixed: Python xbmc.getLocalizedString()
 - 19-03-2006 fixed: my last fix for programs broke other stuff.
 - 19-03-2006 fixed: my programs was broken.
 - 18-03-2006 fixed: iso9660 reading crash
 - 18-03-2006 fixed: iso9660 joliet directory entries need to be converted from utf16be to uft8
 - 18-03-2006 changed: Build.bat output of 'removal of cvs dirs' no longer points to null>. Thx to ljardine + enabled copying of python files
 - 18-03-2006 fixed: trainers now work with autolaunched titles.
 - 18-03-2006 fixed: trainer overlay for games on dvd.
 - 17-03-2006 added: directory navigation history in my programs.
 - 17-03-2006 fixed: trailing (null) behind freespace info strings.
 - 17-03-2006 removed: xns support (buggy, redundant).
 - 17-03-2006 fixed: httpapi: bug in getGUIStatus which could hang the web server thread
 - 17-03-2006 fixed: httpapi: extended Sleep period in debug build to make debugging sessions more reliable (on my PC anyway)